fix(frontend): Add padding to value class
This keeps text away from the scrollbar

IssueID #636

--- a/client/src/components/feature-detail/feature-detail.module.css
+++ b/client/src/components/feature-detail/feature-detail.module.css
@@ -58,6 +58,7 @@
   display: flex;
   align-items: center;
   font-weight: normal;
+  padding-right: 0.5rem;
 }
 
 .list .label,
